<resources>
    <string name="app_name">Merikan Restaurante</string>
    <string name="namarestoran">Paskal Food Market</string>
    <string name="alamatrestoran">Paskal Hyper Square, Jl. Pasir Kaliki No.25-27, Kb. Jeruk, Kec. Andir, Kota Bandung, Jawa Barat 40181</string>
    <string name="kisaranconcurrency">Kisaran 25.000 IDR</string>
    <string name="ordersekarang">Menerima Order Sekarang!</string>
    <string name="rating">4.0</string>
    <string name="daftar_restoran">Daftar Restoran</string>
    <string name="namauser">User</string>
    <string name="ratinguser">4,0</string>
    <string name="reviewuser">Bagus</string>
    <string name="rincian">Rincian</string>
    <string name="semuaulasan">Semua Ulasan</string>
    <string name="gambar_restoran">Gambar Restoran</string>
    <string name="gambar_rating">Gambar Rating</string>
    <string name="gambar_order">Gambar Order Flag</string>
    <string name="gambar_garpu">Gambar Garpu</string>
    <string name="ulasan">Ulasan</string>
    <string name="customer">Customer</string>
    <string name="tap_on_map_instruction">Tap</string>
</resources>