<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="20dp">

    <RelativeLayout
        android:id="@+id/r_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_below="@id/tv_rating"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_rating"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/namarestoran" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_restaurant"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp"
            tools:text="@string/alamatrestoran" />

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp"
            tools:text="@string/kisaranconcurrency" />

        <TextView
            android:id="@+id/tv_order_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_range"
            android:layout_toEndOf="@id/img_item_photo"
            android:gravity="left"
            android:text="@string/ordersekarang"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/tv_restaurant"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:text="@string/rating" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>